Add support for adding custom hashtags to the tweet
This commit adds support to define custom hashtags to add them
to the generated tweet. The github actions cannot take a list
as an input. So, the hashtags should be parsed as a string and
it is converted into list before adding them to the tweet. The
documentation is also updated.

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,10 @@ inputs:
     required: false
     default: 'True'
     description: 'Tweet flag to send a tweet'
+  HASHTAGS:
+    required: false
+    default: 'wordle github'
+    description: 'Custom Hashtags'
 
 outputs:
   tweet:
